# ITT

./: .gitmodules  README.md
src/colcon_extension_idf_wrap/: setup.cfg
src/colcon_extension_idf_wrap/idf_wrapper/: main.py
src/esp_ros2_package_template/: CMakeLists.txt  package.xml
src/ros2_ws/src/esp_camera/: CMakeLists.txt  package.xml
src/ros2_ws/src/esp_ledstrip/: CMakeLists.txt  package.xml
src/ros2_ws/src/esp_ledstrip/esp_ledstrip/components/microros/: CMakeLists.txt
src/ros2_ws/src/esp_ledstrip/esp_ledstrip/components/microros/include/geometry_msgs/geometry_msgs/msg/detail/: pose_array__description.c  pose_stamped__description.c
src/ros2_ws/src/esp_ledstrip/esp_ledstrip/components/microros/include/nav_msgs/nav_msgs/msg/detail/: odometry__description.c  path__description.c
src/ros2_ws/src/esp_ledstrip/esp_ledstrip/components/microros/include/nav_msgs/nav_msgs/srv/detail/: get_map__description.c  set_map__description.c
src/ros2_ws/src/esp_ledstrip/esp_ledstrip/components/microros/include/rcl_interfaces/rcl_interfaces/srv/detail/: set_parameters__description.c
src/ros2_ws/src/esp_ledstrip/esp_ledstrip/components/microros/include/sensor_msgs/sensor_msgs/msg/detail/: multi_dof_joint_state__description.c
src/ros2_ws/src/esp_ledstrip/esp_ledstrip/components/microros/include/stereo_msgs/stereo_msgs/msg/detail/: disparity_image__description.c
src/ros2_ws/src/esp_ledstrip/esp_ledstrip/components/microros/include/test_msgs/test_msgs/msg/detail/: arrays__description.c  bounded_plain_sequences__description.c  bounded_sequences__description.c
src/ros2_ws/src/esp_ledstrip/esp_ledstrip/components/microros/include/test_msgs/test_msgs/srv/detail/: arrays__description.c
src/ros2_ws/src/esp_ledstrip/esp_ledstrip/components/microros/include/trajectory_msgs/trajectory_msgs/msg/detail/: multi_dof_joint_trajectory__description.c  multi_dof_joint_trajectory_point__description.c
src/ros2_ws/src/esp_ledstrip/esp_ledstrip/components/microros/include/type_description_interfaces/type_description_interfaces/srv/detail/: get_type_description__description.c
src/ros2_ws/src/esp_ledstrip/esp_ledstrip/components/microros/include/visualization_msgs/visualization_msgs/msg/detail/: interactive_marker_control__description.c  marker__description.c  marker_array__description.c
src/ros2_ws/src/image_view/: package.xml  setup.py
(+40 files in other folders)
