[metadata]
name = esp-idf-wrap
version = attr: idf_wrapper.__version__
author = Matt
author_email = darkchaos007@gmail.com
maintainer = Matt
maintainer_email = darkchaos007@gmail.com
description = ESP_IDF wrapper for ROS2 as a colcon command
classifiers =
    Environment :: Plugins
    Intended Audience :: Developers
    Operating System :: POSIX
    Programming Language :: Python
    Topic :: Software Development :: Build Tools
keywords = colcon

[options]
python_requires = >=3.10
install_requires =
    colcon-core >= 0.15
packages = find:

[options.entry_points]
colcon_core.verb =
    idf = idf_wrapper.main:IdfWrapper
