<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name></name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email=""></maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>cmake</buildtool_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
